features/notes/NotesEditor.css
/* ... */
.notes-editor-title {
    font: var(--h1);

    &[contenteditable="true"] {
        outline: none;
        border-bottom: 1px solid var(--neutral-200);
        padding-bottom: 4px;
        width: 100%;
        margin-right: var(--spacing-4);
    }
}

.notes-editor-tags {
    margin-bottom: var(--spacing-2);
    .dropdown-container {
        max-width: 200px;
    }
}

.notes-editor-tags-input {
    padding: 2px var(--spacing-2);
    outline: none;
    font-weight: 500;
    color: var(--neutral-400);
    font-size: 14px;
    border: 1px dashed var(--neutral-300);
    background-color: var(--bg-primary);
    border-radius: 4px;
    width: 100px;
}

.notes-editor-image-dropzone {
    display: block;
    border: 1px dashed var(--neutral-300);
    padding: var(--spacing-4);
    margin: var(--spacing-2) 0;
    border-radius: 4px;
    text-align: left;
    font-weight: 500;
    color: var(--neutral-400);
    font-size: 14px;
    cursor: pointer;
    transition-property: background-color, border-color;
    transition-duration: var(--transition-normal);

    &:hover {
        background-color: var(--neutral-50);
        border-color: var(--neutral-400);
    }

    &.dragover {
        background-color: var(--neutral-50);
    }
}

.notes-editor-image-attachment-preview {
    display: flex;
    overflow-x: auto;

    img {
        max-height: 200px;
        box-shadow: var(--shadow-2);
        box-sizing: border-box;
        object-fit: cover;
        margin: 16px 16px 16px 0;
        border-radius: 4px;
    }

    &::-webkit-scrollbar {
        display: none;
    }
}

.notes-editor-textarea {
    font-family: var(--font-family-code);
    width: 100%;
    border: none;
    outline: none;
    resize: none;
    padding-right: 10px;
    display: block;
    border: 1px solid var(--neutral-200);
    background-color: var(--bg-primary);
    color: var(--text-primary);
    padding: var(--spacing-4);
    border-radius: 4px;
}

.notes-grid-item-content,
.notes-editor-rendered {
    display: block;
    overflow-x: auto;
    color: var(--text-primary);

    strong {
        font-weight: 600;
    }

    em {
        font-style: italic;
    }

    h1 {
        font: var(--h2);
    }

    h2 {
        font: var(--h3);
    }

    h3 {
        font: var(--h5);
    }

    h4,
    h5,
    h6 {
        font: var(--h6);
    }

    p,
    blockquote,
    ul,
    ol,
    table {
        font: var(--p1);
        margin: 8px 0 8px 0;
    }

    li {
        font: var(--p1);
        margin-bottom: 4px;
    }

    a {
        color: var(--primary-600, #0366d6);
        text-decoration: none;
    }
    
    a:hover {
        text-decoration: underline;
    }

    img {
        max-width: 100%;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        margin-top: 12px;
        margin-bottom: 12px;
        font-weight: 600;
        line-height: 1.3;
    }

    h1:first-child,
    h2:first-child,
    h3:first-child,
    h4:first-child,
    h5:first-child,
    h6:first-child {
        margin-top: 12px;
    }

    code {
        font: var(--code);
        background-color: var(--neutral-150);
        color: var(--text-primary);
        border-radius: 4px;
        padding: var(--spacing-1) var(--spacing-2);
    }

    pre {
        margin: 16px 0;
        padding: var(--spacing-3);
        background-color: var(--neutral-150);
        border-radius: 4px;
        overflow: hidden;

        &::-webkit-scrollbar {
            display: none;
        }

        code {
            background-color: unset;
            border-radius: 0;
            padding: 0;
            white-space: pre-wrap;
            word-break: break-all;
        }

        * {
            font: var(--code);
        }
    }

    blockquote {
        border-left: 3px solid var(--neutral-700);
        padding-left: 12px;
        margin: 16px 0;
    }

    ul {
        padding-left: 24px;
    }

    ol {
        padding-left: 28px;
    }

    p+ul,
    p+ol,
    h1+ul,
    h1+ol,
    h2+ul,
    h2+ol,
    h3+ul,
    h3+ol,
    h4+ul,
    h4+ol,
    h5+ul,
    h5+ol,
    h6+ul,
    h6+ol {
        margin-top: -8px;
    }

    li>ul,
    li>ol {
        margin: 4px 0 0 0;
    }

    li>ul>li:last-child,
    li>ol>li:last-child {
        margin-bottom: 0;
    }

    .task-list-container {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    .task-list-item {
        padding-left: 0;
    }

    .task-list-item:has(> .task-list-container) {
        margin-bottom: 0;
        padding-bottom: 0;
    }

    .task-item-content {
        display: flex;
        align-items: center;
        gap: var(--spacing-2);
    }

    .task-list-item-checkbox {
        flex-shrink: 0;
        cursor: pointer;
        color: var(--neutral-400);
        transition: color 0.2s ease;

        &:hover {
            color: var(--neutral-600);
            cursor: not-allowed;
        }

        &.checked {
            color: var(--neutral-700);

            &:hover {
                color: var(--neutral-600);
            }
        }
    }

    .task-list-item>.task-list-container {
        padding-left: 24px;
        margin-bottom: 0;
    }

    table {
        border-collapse: collapse;
        margin: 16px 0;
    }

    table,
    th,
    td {
        border: 1px solid var(--neutral-200);
        padding: 8px 12px;
    }

    th {
        text-align: left;
    }

    hr {
        margin: 10px 0;
        border: 0;
        border-top: 1px solid var(--neutral-100);
    }

    s {
        color: var(--neutral-400);
    }

    mark {
        background: rgba(250, 204, 21, 0.1);
        color: var(--yellow-500);
        border-radius: 4px;
        padding: 2px;
    }
}
/* ... */

